--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,18 @@
 name = "FacilityLocationUtils"
 uuid = "924f7881-d6f4-4b47-8844-bb7251440c77"
-authors = ["Mathieu Besançon <mathieu.besancon@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+authors = ["Mathieu Besançon <mathieu.besancon@gmail.com>"]
+version = "1.0.0"
+
+[deps]
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
 julia = "1"
 
 [extras]
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "HiGHS"]
